--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "check:deps": "node scripts/check-deps.mjs"
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
@@ -18,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.0",
     "zod": "^3.23.8"
   },
